@@ -7,14 +7,15 @@ MD5 aa1b576735134579f04b29763901dc4f files/vmware-server-console.xml 1592
 RMD160 0d7e9ed13ebb3c73dd847e95fa95499296609e8c files/vmware-server-console.xml 1592
 SHA256 56aafee80ad705e8d832f8853c36d763d37b87d1cb132a41c50eb63085ae854d files/vmware-server-console.xml 1592
 DIST VMware-server-linux-client-1.0.1-29996.zip 23383483 RMD160 8f1e22c487066fc23c1457953da566e504477df2 SHA1 1fcd1d24f011c8b900c97ed53be5b556f7f13adf SHA256 bcb41c66c3016e54bba6399cf4b592161729eb5d88f65a3719daa227fb3d62a8
-EBUILD vmware-server-console-1.0.1.29996-r1.ebuild 1975 RMD160 c5de7bab969eb00808361d56db828c42967addee SHA1 99144d431120b76383a656353a702861724735cc SHA256 3e42bbd60a8b234f8d8bf99cf8778ff7383cbe5281b9c931c373902caf3b7a58
-MD5 cdbaafade5177ac18fd362b371c0ad82 vmware-server-console-1.0.1.29996-r1.ebuild 1975
-RMD160 c5de7bab969eb00808361d56db828c42967addee vmware-server-console-1.0.1.29996-r1.ebuild 1975
-SHA256 3e42bbd60a8b234f8d8bf99cf8778ff7383cbe5281b9c931c373902caf3b7a58 vmware-server-console-1.0.1.29996-r1.ebuild 1975
+DIST vmware-libssl.so.0.9.7l.tar.bz2 78244 RMD160 195dd4808e60f81621e6ed12b843ded49c0fa747 SHA1 5fe729a1e49e77afd83b408845833174e1296e39 SHA256 3e1e13196066dc5b77d3ef6b5df55a29156eba1f39661e40cd617b538220d089
+EBUILD vmware-server-console-1.0.1.29996-r2.ebuild 2252 RMD160 3433a6020e7fe02023ca903e7c6df7d7e2a17b99 SHA1 b9884135ec58c508e40adb52c59e60ae4ab5d9fd SHA256 65f903cee60e750f80a73017d6012bee0a69a2dbf147c9b4d343782a118a8487
+MD5 239573b24c4364ebfef94f5f3e0a8180 vmware-server-console-1.0.1.29996-r2.ebuild 2252
+RMD160 3433a6020e7fe02023ca903e7c6df7d7e2a17b99 vmware-server-console-1.0.1.29996-r2.ebuild 2252
+SHA256 65f903cee60e750f80a73017d6012bee0a69a2dbf147c9b4d343782a118a8487 vmware-server-console-1.0.1.29996-r2.ebuild 2252
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
 MD5 7cc95faad4185e8ed375248bc73a17fc metadata.xml 159
 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 metadata.xml 159
 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215 metadata.xml 159
-MD5 0fa36dbfb53664fa3e81a399d5f7814c files/digest-vmware-server-console-1.0.1.29996-r1 313
-RMD160 872a919c02e5751b4ea3121804a7469ac6916509 files/digest-vmware-server-console-1.0.1.29996-r1 313
-SHA256 171a512bb41e45c82e8c07692f6048eeb0ba3bbb5859b91eddae54bad7b42f56 files/digest-vmware-server-console-1.0.1.29996-r1 313
+MD5 b42b60cc049cdfb8a3c70f92efbeb791 files/digest-vmware-server-console-1.0.1.29996-r2 584
+RMD160 8ee8f0f6becdee4c749d928ddca8924456e89a05 files/digest-vmware-server-console-1.0.1.29996-r2 584
+SHA256 f136620c98ee342cf6a4efcf5dbe7492b11aee0422750e2e3716b2312163287f files/digest-vmware-server-console-1.0.1.29996-r2 584
