@@ -48,15 +48,16 @@ RMD160 0d7e9ed13ebb3c73dd847e95fa95499296609e8c files/vmware-server.xml 1592
 SHA256 56aafee80ad705e8d832f8853c36d763d37b87d1cb132a41c50eb63085ae854d files/vmware-server.xml 1592
 DIST VMware-server-1.0.1-29996.tar.gz 105500734 RMD160 f4d5805a230afd45ee2234065ffc7c172dd12e18 SHA1 d5e9719fe6dcfef7f13b7e91e31c51905bbeab60 SHA256 08cfa19d9e5475fdaf12114d99bdeecacfd703dd3ec129958bf6f7e98d11641b
 DIST vmware-any-any-update104.tar.gz 297243 RMD160 426616f026de409ca057ec1a0913dc9b3d43ef03 SHA1 9ca5224d832f2b0c0041a1e6afa0103915cdad0f SHA256 c0a9efad2677e93ed914e296131916f8b316377644c5d8c716e6575cd58b3c69
+DIST vmware-libssl.so.0.9.7l.tar.bz2 78244 RMD160 195dd4808e60f81621e6ed12b843ded49c0fa747 SHA1 5fe729a1e49e77afd83b408845833174e1296e39 SHA256 3e1e13196066dc5b77d3ef6b5df55a29156eba1f39661e40cd617b538220d089
 DIST vmware-server-perl-fixed-rpath-libs.tar.bz2 73834 RMD160 7f64627b5b945e8d7dabe39c165a4b66b71fb4d3 SHA1 9d696750ca3ec92b31ca8112fd80dcd832494044 SHA256 c42299dd033187c67b45b739da66583fbd94cdcba745200b89a25ac96cd9364b
-EBUILD vmware-server-1.0.1.29996-r1.ebuild 3011 RMD160 95e79d2168ca32f64e58074619371654ca745e6f SHA1 42154c86c130fe6355b4a0c3ab49080e7079f7cc SHA256 615a723ddbb369ded8b15254c77cee11b9715907610c1bafbfb9b2394f765298
-MD5 ee9e6df5278e69da2f7ec15449f22407 vmware-server-1.0.1.29996-r1.ebuild 3011
-RMD160 95e79d2168ca32f64e58074619371654ca745e6f vmware-server-1.0.1.29996-r1.ebuild 3011
-SHA256 615a723ddbb369ded8b15254c77cee11b9715907610c1bafbfb9b2394f765298 vmware-server-1.0.1.29996-r1.ebuild 3011
+EBUILD vmware-server-1.0.1.29996-r2.ebuild 3197 RMD160 313df12121925c9eb84510b438e0a601ffcdf5fe SHA1 06e2707e6423e82a1c1b8ac6b6f592b1d727f389 SHA256 70c98380017852884749c61fe550c1bbf771203c95e271593137aafd0ead216b
+MD5 8fd248741f2a8a4ef7436c0977cdcc87 vmware-server-1.0.1.29996-r2.ebuild 3197
+RMD160 313df12121925c9eb84510b438e0a601ffcdf5fe vmware-server-1.0.1.29996-r2.ebuild 3197
+SHA256 70c98380017852884749c61fe550c1bbf771203c95e271593137aafd0ead216b vmware-server-1.0.1.29996-r2.ebuild 3197
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
 MD5 7cc95faad4185e8ed375248bc73a17fc metadata.xml 159
 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 metadata.xml 159
 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215 metadata.xml 159
-MD5 30fd2fb78c5ce19d4bb96ab9d36916ff files/digest-vmware-server-1.0.1.29996-r1 867
-RMD160 5062ade4b17e858c57c12b0b2cb122757865734a files/digest-vmware-server-1.0.1.29996-r1 867
-SHA256 609d72c5e8466cd340b69bb5b87a063e77320a412b6ce035e495c4544802964a files/digest-vmware-server-1.0.1.29996-r1 867
+MD5 f47d7f1bb004a6ef0e501721f91b5c08 files/digest-vmware-server-1.0.1.29996-r2 1138
+RMD160 f165c718639c9d3c2acd0bcea3f3e21c45eec3b7 files/digest-vmware-server-1.0.1.29996-r2 1138
+SHA256 abb9e1e31eb1536aff9222f088cc3793c1feb48e35c7174dbe0932c25a78dda5 files/digest-vmware-server-1.0.1.29996-r2 1138
