@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/vmware-server/vmware-server-1.0.0.28343.ebuild,v 1.1 2006/07/31 20:23:50 ikelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/vmware-server/vmware-server-1.0.1.29996-r2.ebuild,v 1.1 2006/10/02 22:59:16 ikelos Exp $
 
 # Unlike many other binary packages the user doesn't need to agree to a licence
 # to download VMWare. The agreeing to a licence is part of the configure step
@@ -18,7 +18,10 @@ SRC_URI="http://download3.vmware.com/software/vmserver/${MY_P}.tar.gz
 		http://ftp.cvut.cz/vmware/obselete/${ANY_ANY}.tar.gz
 		http://knihovny.cvut.cz/ftp/pub/vmware/${ANY_ANY}.tar.gz
 		http://knihovny.cvut.cz/ftp/pub/vmware/obselete/${ANY_ANY}.tar.gz
-		http://dev.gentoo.org/~ikelos/devoverlay-distfiles/${PN}-perl-fixed-rpath-libs.tar.bz2"
+		http://dev.gentoo.org/~ikelos/devoverlay-distfiles/${PN}-perl-fixed-rpath-libs.tar.bz2
+		mirror://gentoo/${PN}-perl-fixed-rpath-libs.tar.bz2
+		http://dev.gentoo.org/~wolf31o2/sources/dump/vmware-libssl.so.0.9.7l.tar.bz2
+		mirror://gentoo/vmware-libssl.so.0.9.7l.tar.bz2"
 
 LICENSE="vmware"
 IUSE=""
